--- a/index.html
+++ b/index.html
@@ -20,14 +20,43 @@
 			text-align: center;
 		}
 
+		.example {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			text-decoration: none;
+			background-color: #333;
+			color: #fff;
+			padding: 8px 16px;
+			border-radius: 6px;
+			text-decoration: none;
+			font-weight: 600;
+		}
+
+		.bootstrap {
+			position: absolute;
+			top: 10px;
+			right: 160px;
+			text-decoration: none;
+			background-color: #333;
+			color: #fff;
+			padding: 8px 16px;
+			border-radius: 6px;
+			text-decoration: none;
+			font-weight: 600;
+		}
+
 	</style>
 </head>
 <body>
+<header>
+	<a class="example" href="example.html" target="_blank">Example HTML</a>
+	<a class="bootstrap" href="bootstrap.html" target="_blank">Example Bootstrap 5</a>
+</header>
 <div id="root"></div>
 
 <script type="text/babel" src="assets/js/scripts.js"></script>
 <footer>
-	<p style="text-align: center;">&copy; 2025 Color Palette Generator. All rights reserved.</p>
 	<p style="text-align: center;">Created with love by <a href="https://jeffbehnke.com" target="_blank">Jeffrey Behnke</a> and <a title="AI-powered project management for modern development teams" href="https://devshed.io" target="_blank">DevShed.io</a>.</p>
 	<a href="https://devshed.io" target="_blank" style="position: fixed; bottom: 10px; right: 10px; display: inline-flex; align-items: center; background: #333; color: #fff; padding: 8px 16px; border-radius: 6px; text-decoration: none; font-weight: 600; gap: 8px;">
 		DevShed.io Signup for Early-bird
