--- a/example.html
+++ b/example.html
@@ -5,43 +5,39 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Color System Example</title>
 	<style>
-		/* First include your generated color system CSS here */
+	
 		:root {
-			--cl-primary: #0d6efd;
-			--cl-secondary: #6c757d;
-			--cl-success: #198754;
-			--cl-info: #0dcaf0;
-			--cl-warning: #ffc107;
-			--cl-danger: #dc3545;
-			--cl-light: #f8f9fa;
-			--cl-dark: #212529;
-			--cl-primary-bg: #ffffff;
-			--cl-secondary-bg: #f8f9fa;
-			--cl-tertiary-bg: #6c6c6c;
-			--cl-gradient-1: linear-gradient(to right, #4f46e5, #0ea5e9);
-			--cl-gradient-2: linear-gradient(to right, #8b5cf6, #d946ef);
-			--cl-gradient-3: linear-gradient(to right, #06b6d4, #3b82f6);
+			--primary: #0d6efd;
+			--secondary: #6c757d;
+			--success: #198754;
+			--info: #0dcaf0;
+			--warning: #ffc107;
+			--danger: #dc3545;
+			--light: #f8f9fa;
+			--dark: #212529;
+			--custom-1: #ffffff;
+			--custom-2: #f8f9fa;
+			--custom-3: #e9ecef;
+			--gradient-1: linear-gradient(to right, #4f46e5, #0ea5e9);
+			--gradient-2: linear-gradient(to right, #8b5cf6, #d946ef);
+			--gradient-3: linear-gradient(to right, #06b6d4, #3b82f6);
 		}
 
-		.cl-bg-primary { background-color: var(--cl-primary); }
-		.cl-bg-secondary { background-color: var(--cl-secondary); }
-		.cl-bg-success { background-color: var(--cl-success); }
-		.cl-bg-info { background-color: var(--cl-info); }
-		.cl-bg-warning { background-color: var(--cl-warning); }
-		.cl-bg-danger { background-color: var(--cl-danger); }
-		.cl-bg-light { background-color: var(--cl-light); }
-		.cl-bg-dark { background-color: var(--cl-dark); }
+		.bg-primary { background-color: var(--primary) !important; }
+		.bg-secondary { background-color: var(--secondary) !important; }
+		.bg-success { background-color: var(--success) !important; }
+		.bg-info { background-color: var(--info) !important; }
+		.bg-warning { background-color: var(--warning) !important; }
+		.bg-danger { background-color: var(--danger) !important; }
+		.bg-light { background-color: var(--light) !important; }
+		.bg-dark { background-color: var(--dark) !important; }
+		.bg-custom-1 { background-color: var(--custom-1) }
+		.bg-custom-2 { background-color: var(--custom-2) }
+		.bg-custom-3 { background-color: var(--custom-3) }
+		.bg-gradient-1 { background: var(--gradient-1); }
+		.bg-gradient-2 { background: var(--gradient-2); }
+		.bg-gradient-3 { background: var(--gradient-3); }
 
-		.cl-primary-bg { color: var(--cl-primary-bg); }
-		.cl-bg-primary-bg { background-color: var(--cl-primary-bg); }
-		.cl-secondary-bg { color: var(--cl-secondary-bg); }
-		.cl-bg-secondary-bg { background-color: var(--cl-secondary-bg); }
-		.cl-tertiary-bg { color: var(--cl-tertiary-bg); }
-		.cl-bg-tertiary-bg { background-color: var(--cl-tertiary-bg); }
-
-		.cl-bg-gradient-1 { background: var(--cl-gradient-1); }
-		.cl-bg-gradient-2 { background: var(--cl-gradient-2); }
-		.cl-bg-gradient-3 { background: var(--cl-gradient-3); }
 
 		/* Basic styling for the example */
 		body {
@@ -85,7 +81,7 @@
 		}
 
 		/* Light text for light backgrounds */
-		.cl-bg-light, .cl-bg-warning, .cl-bg-info {
+		.bg-light, .bg-warning, .bg-info {
 			color: #000;
 		}
 
@@ -105,25 +101,25 @@
 
 	<h2>Theme Colors</h2>
 	<div class="grid">
-		<div class="color-block cl-bg-primary">primary</div>
-		<div class="color-block cl-bg-secondary">secondary</div>
-		<div class="color-block cl-bg-success">success</div>
-		<div class="color-block cl-bg-danger">danger</div>
-		<div class="color-block cl-bg-warning">warning</div>
-		<div class="color-block cl-bg-info">info</div>
-		<div class="color-block cl-bg-light">light</div>
-		<div class="color-block cl-bg-dark">dark</div>
+		<div class="color-block bg-primary">primary</div>
+		<div class="color-block bg-secondary">secondary</div>
+		<div class="color-block bg-success">success</div>
+		<div class="color-block bg-danger">danger</div>
+		<div class="color-block bg-warning">warning</div>
+		<div class="color-block bg-info">info</div>
+		<div class="color-block bg-light">light</div>
+		<div class="color-block bg-dark">dark</div>
 	</div>
 
 	<h2>Backgrounds</h2>
-	<div class="color-block cl-bg-primary-bg mb-1 text-dark">primary-bg</div>
-	<div class="color-block cl-bg-secondary-bg mb-1 text-dark">secondary-bg</div>
-	<div class="color-block cl-bg-tertiary-bg mb-1">tertiary-bg</div>
+	<div class="color-block bg-custom-1 mb-1 text-dark">bg-custom-1</div>
+	<div class="color-block bg-custom-2 mb-1 text-dark">bg-custom-2</div>
+	<div class="color-block bg-custom-3 mb-1 text-dark">bg-custom-3</div>
 
 	<h2>Gradients</h2>
-	<div class="gradient-block cl-bg-gradient-1">gradient-1</div>
-	<div class="gradient-block cl-bg-gradient-2">gradient-2</div>
-	<div class="gradient-block cl-bg-gradient-3">gradient-3</div>
+	<div class="gradient-block bg-gradient-1">gradient-1</div>
+	<div class="gradient-block bg-gradient-2">gradient-2</div>
+	<div class="gradient-block bg-gradient-3">gradient-3</div>
 </div>
 <div style="background: linear-gradient(135deg, #4F46E5 0%, #7C3AED 100%); color: white; padding: 24px; border-radius: 12px; max-height: 200px; overflow: hidden; font-family: system-ui, -apple-system, sans-serif;">
 	<div style="display: flex; align-items: center; justify-content: space-between; gap: 24px; max-width: 1200px; margin: 0 auto;">
